# src/routes/authRoutes.js
@@ -1,6 +1,5 @@
-// Signup, login, JWT, 2FA
 import express from 'express';
-import { register, login, logout } from '../controllers/authController.js';
+import { register, login, logout, resetPassword } from '../controllers/authController.js';
 import { authenticate } from '../middleware/authMiddleware.js';
 
 const router = express.Router();
@@ -8,6 +7,7 @@ const router = express.Router();
 // Public routes
 router.post('/register', register);
 router.post('/login', login);
+router.post('/reset-password', resetPassword);
 
 // Protected routes
 router.post('/logout', authenticate, logout);
